Bug 66929 - FILESAVE: DOCX export of textbox's 'inset' attribute not writing default values correctly
Summary: FILESAVE: DOCX export of textbox's 'inset' attribute not writing default valu...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.2.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Adam CloudOn
URL:
Whiteboard: BSA target:4.2.0
Keywords:
Depends on:
Blocks:
 
Reported: 2013-07-15 14:52 UTC by Adam CloudOn
Modified: 2013-07-16 11:20 UTC (History)
0 users

See Also:
Crash report or crash signature:
Regression By:


Attachments
DOCX containing textbox with default 'inset' values (21.12 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-07-15 14:52 UTC, Adam CloudOn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam CloudOn 2013-07-15 14:52:03 UTC
Created attachment 82447 [details]
DOCX containing textbox with default 'inset' values

Problem description: 
When loading a DOCX into LO that has a text-box with default 'inset' values - LO exports it back to DOCX incorrectly.

Example:
the attached DOCX has a '<v:textbox>' node with the attribute 'inset="0"'.
'inset' has 'left','top','right','bottom' values.
when 'inset' is set like this 'inset="0"' it means that only the 'left' value is set to 0.
All the other values are defaulted.
The default values are:
(based on http://msdn.microsoft.com/en-us/library/documentformat.openxml.vml.textbox.aspx)
* left - 0.1in
* top - 0.05in
* right - 0.1in
* bottom - 0.05in

So in the example above - LO should write back to the file '0in, 0.05in, 0.1in, 0.05in' or '0'.
Instead LO writes '0,0,0,0' as the 'inset' values.

Steps to reproduce:
1. Load DOCX in LO
2. Save as NEW.DOCX
3. Load NEW.DOCX in Word
4. The inset of the text-box is wrong (set to 0,0,0,0)

Current behavior:
The 'inset' attribute of 'textbox' is exported as '0,0,0,0'.

Expected behavior:
The 'inset' attribute of 'textbox' should be exported as '0' or as '0in, 0.05in, 0.1in, 0.05in'.
              
Operating System: All
Version: 4.2.0.0.alpha0+ Master
Comment 1 Commit Notification 2013-07-16 07:53:44 UTC
Adam Co committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=1a37ca65b896a5ba100d46c7cde0793f62bc546b

fdo#66929: fix for default textbox inset values



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 retired 2013-07-16 10:48:56 UTC
Adam: does your commit mean this is fixed? If so, could you update the status of this bug? :)