fdo#66929: fix for default textbox inset values

Conflicts:
	sw/qa/extras/ooxmlexport/ooxmlexport.cxx

Change-Id: I0e9fa5e73e802f85f02c3fcc5c276ed0c1cb2a58